--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">  
+    <script src="lap.js" defer></script>
     <script src="./index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="timer">
+    <div class="timer-output">
         <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>:<span id="mseconds">00</span>
     </div>
     <div>
         <button class="toggleTimer start">START</button>
-        <button class="lap">Lap</button>
+        <button class="add-lap">Lap</button>
         <button class="clear-lap">Clear Lap</button>
         <button class="reset">RESET</button>
     </div>
+    <ul class="laps"></ul>
 </body>
 </html>
