--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@700&display=swap');
+    </style>
+    <link rel="stylesheet" href="./style.css" />
     <script src="lap.js" defer></script>
     <script src="./index.js" defer></script>
     <title>Document</title>
-</head>
-<body>
-    <div class="timer-output">
-        <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>:<span id="mseconds">00</span>
-    </div>
-    <div>
+  </head>
+  <body>
+    <div class="timer-container">
+      <div class="timer-output">
+        <span id="hours">00</span>:<span id="minutes">00</span>:<span
+          id="seconds">00</span>:<span id="mseconds">00</span>
+      </div>
+      <div class="timer-btns">
         <button class="toggleTimer start">START</button>
-        <button class="add-lap">Lap</button>
-        <button class="clear-lap">Clear Lap</button>
+        <button class="add-lap">LAP</button>
+        <button class="clear-lap">CLEAR LAP</button>
         <button class="reset">RESET</button>
+      </div>
+      <ol class="laps"></ol>
     </div>
-    <ul class="laps"></ul>
-</body>
+  </body>
 </html>
