add split-lap feature

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
   </head>
   <body>
     <div class="timer-container">
-      <div class="timer-output">
+      <div class="main-timer-output">
         <span id="hours">00</span>:<span id="minutes">00</span>:<span
           id="seconds">00</span>:<span id="mseconds">00</span>
+      </div>
+      <div class="lap-timer-output">
+        <span id="lap_hours">00</span>:<span id="lap_minutes">00</span>:<span
+          id="lap_seconds">00</span>:<span id="lap_mseconds">00</span>
       </div>
       <div class="timer-btns">
         <button class="toggleTimer start">START</button>
