--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@700&display=swap');
     </style>
     <link rel="stylesheet" href="./style.css" />
-    <script src="lap.js" defer></script>
-    <script src="./index.js" defer></script>
+    <script src="./index.js" defer type="module"></script>
     <title>Document</title>
   </head>
   <body>
